log
Thu Mar 19 07:17:21 PM UTC 2026: 
 exercises.c | 35 +++++++++++++++++++++++++++--------
 1 file changed, 27 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c:96:1: error: unknown type name ‘def’
   96 | def vaciarLista (List lista, int elemento)
      | ^~~
exercises.c:96:23: error: parameter 1 (‘lista’) has incomplete type
   96 | def vaciarLista (List lista, int elemento)
      |                  ~~~~~^~~~~
exercises.c: In function ‘vaciarLista’:
exercises.c:100:8: error: ‘i’ undeclared (first use in this function)
  100 |    for(i = 0; i < talla; i++)
      |        ^
exercises.c:100:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:102:13: error: dereferencing ‘void *’ pointer [-Werror]
  102 |          if(*primero == elemento)
      |             ^~~~~~~~
exercises.c:102:13: error: void value not ignored as it ought to be
exercises.c:109:1: error: control reaches end of non-void function [-Werror=return-type]
  109 | }
      | ^
cc1: all warnings being treated as errors
27dfbfd
Thu Mar 19 07:18:03 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c:96:24: error: parameter 1 (‘lista’) has incomplete type
   96 | void vaciarLista (List lista, int elemento)
      |                   ~~~~~^~~~~
exercises.c: In function ‘vaciarLista’:
exercises.c:100:8: error: ‘i’ undeclared (first use in this function)
  100 |    for(i = 0; i < talla; i++)
      |        ^
exercises.c:100:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:102:13: error: dereferencing ‘void *’ pointer [-Werror]
  102 |          if(*primero == elemento)
      |             ^~~~~~~~
exercises.c:102:13: error: void value not ignored as it ought to be
cc1: all warnings being treated as errors
b4455ba
Thu Mar 19 07:18:51 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘vaciarLista’:
exercises.c:100:8: error: ‘i’ undeclared (first use in this function)
  100 |    for(i = 0; i < talla; i++)
      |        ^
exercises.c:100:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:102:13: error: dereferencing ‘void *’ pointer [-Werror]
  102 |          if(*primero == elemento)
      |             ^~~~~~~~
exercises.c:102:13: error: void value not ignored as it ought to be
cc1: all warnings being treated as errors
1567d65
Thu Mar 19 07:20:08 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘vaciarLista’:
exercises.c:102:13: error: dereferencing ‘void *’ pointer [-Werror]
  102 |          if(*primero == elemento)
      |             ^~~~~~~~
exercises.c:102:13: error: void value not ignored as it ought to be
cc1: all warnings being treated as errors
47722e9
Thu Mar 19 07:20:54 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘vaciarLista’:
exercises.c:102:27: error: comparison between pointer and integer [-Werror]
  102 |          if((int*)primero == elemento)
      |                           ^~
cc1: all warnings being treated as errors
563380f
Thu Mar 19 07:21:06 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
d6efcfd
Thu Mar 19 07:22:19 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘vaciarLista’:
exercises.c:102:19: error: dereferencing ‘void *’ pointer [-Werror]
  102 |          if((int*)*primero == elemento)
      |                   ^~~~~~~~
exercises.c:102:13: error: invalid use of void expression
  102 |          if((int*)*primero == elemento)
      |             ^
cc1: all warnings being treated as errors
1aab65f
